<resources>
    <string name="app_name">CommunityLink</string>
    <string name="login_create_account_text">Não é cadastrado? Crie uma conta para utilizar o CommunityLink!</string>
    <string name="login">Login</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="password">Senha</string>
    <string name="email">E-mail</string>
    <string name="create_new_account">Criar nova conta</string>
    <string name="register_text">Preencha todos os dados abaixo para criar a sua conta.</string>
    <string name="name">Nome</string>
    <string name="sex">Sexo</string>
    <string name="repeat_password">Repita sua senha</string>
    <string name="date_of_birth">Data de Nascimento</string>
    <string name="address">Endereço</string>
    <string name="phone">Telefone</string>
    <string name="cpf">CPF</string>
    <string name="dashboard">Dashboard</string>
    <string name="explorar">Explorar</string>
    <string name="perfil">Perfil</string>
    <string name="redefine_password_text_1">Insira seu e-mail para receber o link de redefinição de senha.</string>
    <string name="send_email">Enviar e-mail</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos!</string>
    <string name="verifique_email">Verifique seu endereço de e-mail para continuar</string>
    <string name="login_error_0">Houve algum problema no login, tente novamente</string>
    <string name="login_error_1">Email ou senha incorretos</string>
    <string name="internet_error">Falha ao conectar a internet</string>
    <string name="cadastro_realizado">Cadastro realizado com sucesso</string>
    <string name="pesquisar">Pesquisar...</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="confirm_changes">Confirmar alterações</string>
    <string name="logout">Logout</string>
    <string name="delete_user">Excluir usuário</string>
    <string name="donation">Doação</string>
    <string name="event">Evento</string>
    <string name="filled">Preenchida</string>
    <string name="available">Disponível</string>
    <string name="placeholder">placeholder</string>
    <string name="pending">Pendente</string>
    <string name="received">Recebida</string>
    <string name="new_password_successfully_confirmed">Nova senha confirmada com sucesso!</string>
    <string name="Log_in">Fazer login</string>
    <string name="new_account_successfully_registered">Nova conta cadastrada com sucesso!</string>
    <string name="view_volunteer_slots">Ver vagas para voluntários</string>
    <string name="make_donation">Realizar Doação</string>
    <string name="members">Membros</string>
    <string name="actions">Ações</string>
    <string name="project_donations">Doações para o Projeto</string>
    <string name="goal">Meta</string>
    <string name="goal_hit">Meta batida!</string>
    <string name="to_be_confirmed">A ser confirmada.</string>
    <string name="cancel_volunteer">Cancelar participação</string>
    <string name="my_actions">Minhas Ações</string>
    <string name="events_and_donations">Eventos e Doações</string>
    <string name="pending_actions">Ações Pendentes</string>
    <string name="my_projects">Meus Projetos</string>
    <string name="erro_user">Usuário não logado</string>
    <string name="erro_get_user_data">Erro ao buscar dados do Usuário, tente novamente.</string>
    <string name="user_has_no_data">Um erro ocorreu!</string>
    <string name="erro_update_user_data">Erro ao atualizar os dados, tente novamente!</string>
    <string name="success_updating_user_data">Sucesso ao atualizar seus dados!</string>
    <string name="create_new_project">Cadastrar novo projeto</string>
    <string name="description">Descrição</string>
    <string name="tags_parenthesis">Tags (separe em vírgulas)*</string>
    <string name="tags">Tags</string>
    <string name="description_demanded">Descrição*</string>
    <string name="cnpj">CNPJ</string>
    <string name="pix_key">Chave PIX</string>
    <string name="cnpj_hint">XX.XXX.XXX/XXXX-XX</string>
    <string name="unchecked_project_text">O projeto ainda não foi aceito por um administrador. Clique no botão abaixo para requisitar a revisão.</string>
    <string name="unrefreshed_project_text">As alterações serão aplicadas após a confirmação do administrador do sistema.</string>
    <string name="request_revision">Requisitar revisão</string>
    <string name="delete_project_text">Um projeto pode ser excluído somente se nenhum membro efetivo participou de ações do projeto.</string>
    <string name="delete_project">Excluir projeto</string>
    <string name="deactivate_project">Descontinuar projeto</string>
    <string name="search">Pesquisar</string>
    <string name="representatives">Representantes</string>
    <string name="action_type">Tipo de ação</string>
    <string name="delete_post">Excluir publicação</string>
    <string name="project">Projeto</string>
    <string name="match_passwords">As duas senhas estão diferentes!</string>
    <string name="selecione_uma_data">Selecione uma data</string>
    <string name="delete_goal_content_popup">Você realmente deseja excluir a meta?</string>
    <string name="make_donation_monetary_value">Se deseja doar um valor monetário:</string>
    <string name="qtd">Qtd.</string>
    <string name="object">Objeto</string>
    <string name="monetary_value_hint">R$ X.XXXX,XX</string>
    <string name="monetary_value">Valor (R$)</string>
    <string name="volunteer_for_slot_question">Candidatar-se à vaga?</string>
    <string name="volunteer_for_slot_content_popup">Você entrará na lista de espera da vaga. Se você for chamado, a vaga aparecerá em \'Eventos e Doações\' no seu perfil.</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="copy_pix_key">Copiar chave Pix</string>
    <string name="content">Conteúdo</string>
    <string name="load_photo">Carregar foto</string>
    <string name="post">Publicação</string>
    <string name="new_post">Nova publicação</string>
    <string name="edit_post">Editar publicação</string>
    <string name="confirm_changes_question">Confirmar alterações?</string>
    <string name="close">Fechar</string>
    <string name="delete_user_top_popup_content">Ao excluir a conta, toda menção ao seu usuário será substituída por \'Anônimo\'.</string>
    <string name="delete_user_bottom_popup_content">Os projetos em que você atuou deletarão sua participação para sempre.</string>
    <string name="confirm_decision">Confirmar decisão</string>
    <string name="delete_project_popup_content">Você realmente deseja excluir o projeto?</string>
    <string name="project_revision_popup_content">Você realmente deseja submeter o projeto para revisão?</string>
    <string name="cancel_slot_top_popup_content">Você realmente deseja cancelar seu compromisso com o evento?</string>
    <string name="cancel_slot_bottom_popup_content">Você poderá candidatar-se novamente na vaga.</string>
    <string name="remove_member_top_popup_content">Você realmente deseja remover o membro do projeto?</string>
    <string name="remove_member_bottom_popup_content">Toda ação representada pelo membro mostrará o representante como \'Anônimo\'.</string>
    <string name="delete_post_popup_content">Você realmente deseja excluir esta publicação?</string>
    <string name="deactivate_project_top_popup_content">Você realmente deseja descontinuar o projeto?</string>
    <string name="deactivate_project_middle_popup_content">O projeto não poderá mais receber doações ou criar ações.</string>
    <string name="deactivate_project_bottom_popup_content">Uma vez desativado, você poderá ativar ele novamente quando quiser.</string>
    <string name="delete_action_popup_content">Você realmente deseja excluir a ação?</string>
    <string name="cancel_donation_popup_content">Você realmente deseja cancelar a sua doação para o projeto?</string>
    <string name="new_goal">Nova meta</string>
    <string name="manage_donations">Gerenciar Doações</string>
    <string name="edit_action">Editar Ação</string>
    <string name="manage_slots">Gerenciar Vagas</string>
    <string name="pending_requests">Pedidos Pendentes</string>
    <string name="confirm_donation_bottom_popup_content">Caso não tenha recebido esta doação, clique no botão abaixo para notificar o usuário.</string>
    <string name="confirm_donation_top_popup_content">Para confirmar a doação, aperte o botão abaixo.</string>
    <string name="confirm_donation">Confirmar doação</string>
    <string name="attach_image">Anexar imagem</string>
    <string name="i_didnt_receive_this_donation">Não recebi esta doação</string>
    <string name="remove_volunteer_top_popup_content">Você deseja realmente remover o voluntário atual do cargo?</string>
    <string name="remove_volunteer_bottom_popup_content">O usuário será notificado e poderá se inscrever novamente para a vaga.</string>
    <string name="delete_slot_popup_content">Você realmente deseja excluir a vaga de voluntário?</string>
    <string name="create_new_goal">Criar nova meta</string>
    <string name="amount">Montante</string>
    <string name="period">Período</string>
    <string name="start">Início</string>
    <string name="end">Fim</string>
    <string name="remove_volunteer">Remover voluntário</string>
    <string name="delete_slot">Excluir vaga</string>
    <string name="notes">Anotações</string>
    <string name="punctuality">Pontualidade</string>
    <string name="place">Local</string>
    <string name="create_new_slot">Criar nova vaga</string>
    <string name="refuse_volunteer_top_popup_content">Você realmente deseja recusar o pedido do voluntário?</string>
    <string name="refuse_volunteer_bottom_popup_content">O usuário será notificado e poderá se inscrever novamente para a vaga.</string>
    <string name="refuse_project_popup_content">Você realmente deseja recusar o pedido do projeto?</string>
    <string name="action">Ação</string>
    <string name="add_member_question">Adicionar membro?</string>
    <string name="add_representative_question">Adicionar representante?</string>
    <string name="manage_member">Gerenciar membro</string>
    <string name="member_data">Dados do membro</string>
    <string name="accept_request_question">Aceitar pedido?</string>
    <string name="remove">Remover</string>
    <string name="manage_members">Gerenciar Membros</string>
    <string name="manage_direct_donations">Gerenciar Doações Diretas</string>
    <string name="manage_actions">Gerenciar Ações</string>
    <string name="create_action">Criar Ação</string>
    <string name="add_place">Adicionar local</string>
    <string name="end_date">Data de fim</string>
    <string name="start_date">Data de início</string>
    <string name="volunteer_slot">Vaga de voluntário</string>
    <string name="email_sent">E-mail enviado com sucesso!</string>
    <string name="make_donation_object">Se deseja doar um objeto:</string>
    <string name="donation_page">Página da Doação</string>
    <string name="edit_project">Editar Projeto</string>
    <string name="edit_slot">Editar Vaga</string>
    <string name="event_page">Página do Evento</string>
    <string name="volunteer_slots">Vagas para Voluntários</string>
    <string name="project_actions">Ações do Projeto</string>
    <string name="admin">Administrador</string>
    <string name="status">Status</string>
    <string name="date">Data</string>
    <string name="all">Todos</string>
    <string name="responsible">Responsáveis</string>
    <string name="member">Membro</string>
    <string name="modified_goal">Meta alterada!</string>
    <string name="new_goal_created">Nova meta criada!</string>
    <string name="goal_post">"Meta:"</string>
    <string name="new_goal_post">"Nova meta:"</string>
    <string name="manage_goals">Gerenciar Metas</string>
    <string name="continue_project">Continuar projeto</string>
    <string name="confirmar_entrega">Confirmar entrega</string>
</resources>