<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="@dimen/border"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_tag"
            android:backgroundTint="@color/black"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/meu_perfil"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <ufes.grad.mobile.communitylink.components.SeparatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ufes.grad.mobile.communitylink.components.IconButtonLayout
            android:id="@+id/projects_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            app:button_icon="@drawable/ic_archive"
            app:button_text="@string/my_projects" />

        <ufes.grad.mobile.communitylink.components.IconButtonLayout
            android:id="@+id/actions_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            app:button_icon="@drawable/ic_clipboard"
            app:button_text="@string/my_actions" />

        <ufes.grad.mobile.communitylink.components.IconButtonLayout
            android:id="@+id/events_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            app:button_icon="@drawable/ic_zap"
            app:button_text="@string/events_and_donations" />

        <ufes.grad.mobile.communitylink.components.IconButtonLayout
            android:id="@+id/pending_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            app:button_icon="@drawable/ic_calendar"
            app:button_text="@string/pending_actions" />

        <ufes.grad.mobile.communitylink.components.SeparatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ufes.grad.mobile.communitylink.components.FormsLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:forms_title_text="@string/name" />

        <ufes.grad.mobile.communitylink.components.FormsLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:forms_title_text="@string/email"
            app:forms_input_type="textEmailAddress"/>

        <ufes.grad.mobile.communitylink.components.FormsLayout
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:forms_title_text="@string/cpf"
            app:forms_input_type="number"/>

        <ufes.grad.mobile.communitylink.components.FormsLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:forms_title_text="@string/phone"
            app:forms_input_type="phone"/>

        <ufes.grad.mobile.communitylink.components.FormsLayout
            android:id="@+id/sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:forms_title_text="@string/sex" />

        <ufes.grad.mobile.communitylink.components.FormsLayout
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:forms_title_text="@string/date"
            app:forms_input_type="date"/>

        <ufes.grad.mobile.communitylink.components.FormsLayout
            android:id="@+id/address_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:forms_title_text="@string/address" />

        <Button
            android:id="@+id/confirm_alterations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/style_button"
            android:backgroundTint="@color/black"
            android:text="@string/confirm_changes"
            android:textColor="@color/white" />

        <ufes.grad.mobile.communitylink.components.SeparatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_button"
            android:backgroundTint="@color/black"
            android:text="@string/logout"
            android:textColor="@color/white" />

        <ufes.grad.mobile.communitylink.components.SeparatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/exclude_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_button"
            android:backgroundTint="@color/red"
            android:text="@string/delete_user"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>