<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="@dimen/border"
    android:scrollbars="none"
    tools:context=".view.fragments.EditActionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ufes.grad.mobile.communitylink.ui.components.FormsLayout
            android:id="@+id/name_forms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:forms_title_text="@string/name" />

        <ufes.grad.mobile.communitylink.ui.components.FormsLayout
            android:id="@+id/description_forms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:forms_box_size="80dp"
            app:forms_title_text="@string/description" />

        <ufes.grad.mobile.communitylink.ui.components.FormsLayout
            android:id="@+id/tags_forms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:forms_box_size="80dp"
            app:forms_hint_text="@string/tags"
            app:forms_title_text="@string/tags_parenthesis" />

        <ufes.grad.mobile.communitylink.ui.components.FormsLayout
            android:id="@+id/start_date_forms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:forms_title_text="@string/start_date" />

        <ufes.grad.mobile.communitylink.ui.components.FormsLayout
            android:id="@+id/end_date_forms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:forms_title_text="@string/end_date" />

        <ufes.grad.mobile.communitylink.ui.components.FormsLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:forms_title_text="@string/add_place" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_button"
            android:backgroundTint="@color/black"
            android:text="@string/confirm_changes"
            android:textColor="@color/white" />

        <ufes.grad.mobile.communitylink.ui.components.SeparatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/representatives"
            android:textSize="16sp" />

        <ufes.grad.mobile.communitylink.ui.components.CommonCardLayout
            android:id="@+id/primary_representative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:card_upper_text="Representante primário" />

        <ufes.grad.mobile.communitylink.ui.components.CommonCardLayout
            android:id="@+id/secondary_representative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:card_upper_text="Representante secundário" />

    </LinearLayout>

</ScrollView>