<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_button"
    android:backgroundTint="@color/purple"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        style="@style/PopupTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_donation" />

    <TextView
        style="@style/PopupTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_donation_object" />


    <ufes.grad.mobile.communitylink.ui.components.FormsLayout
        android:id="@+id/object_forms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:forms_title_color="@color/white"
        app:forms_title_text="@string/object" />

    <TextView
        android:id="@+id/place_text"
        style="@style/PopupTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:text="Local de entrega: XXXXXXX"
        android:textAlignment="textStart" />

    <ufes.grad.mobile.communitylink.ui.components.SeparatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:separator_color="@color/white" />

    <TextView
        style="@style/PopupTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_donation_monetary_value" />

    <ufes.grad.mobile.communitylink.ui.components.FormsLayout
        android:id="@+id/value_forms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:forms_hint_text="@string/monetary_value_hint"
        app:forms_input_type="decimal"
        app:forms_title_color="@color/white"
        app:forms_title_text="@string/monetary_value" />

    <Button
        android:id="@+id/pix_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button"
        android:backgroundTint="@color/white"
        android:text="@string/copy_pix_key"
        android:textColor="@color/purple"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/button_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/style_button"
            android:backgroundTint="@color/white"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/cancel"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/style_button"
            android:backgroundTint="@color/black"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
